--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-query": "^4.35.0",
-    "@tanstack/react-query-devtools": "^4.35.0",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "iso-country-currency": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.7",
+    "sweetalert2": "^11.9.0",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
