--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.17",
     "@supabase/supabase-js": "^2.33.1",
     "@tanstack/react-query": "^4.35.0",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "chart.js": "^4.4.0",
+    "dayjs": "^1.11.10",
+    "emoji-picker-react": "^4.5.15",
     "iso-country-currency": "^0.7.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.0.7",
     "sweetalert2": "^11.9.0",
+    "swiper": "^11.0.4",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
